# app/Cidade/Controllers/CidadeController.php
@@ -17,6 +17,27 @@ class CidadeController extends BaseController {
      *     description="Retorna objetos cidades",
      *     path="/api/cidade",
      *     @OA\Response(response="200", description="Uma lista com cidades"),
+     *      @OA\Parameter(
+     *          name="order_by",
+     *          in="query",
+     *          type="string",
+     *          description="Nome do campo a ser ordenado",
+     *          required=false,
+     *      ),
+     *      @OA\Parameter(
+     *          name="order_dir",
+     *          in="query",
+     *          type="string",
+     *          description="Direção da ordenação: ASC ou DESC",
+     *          required=false,
+     *      ),
+     *      @OA\Parameter(
+     *          name="search",
+     *          in="query",
+     *          type="string",
+     *          description="Valor a ser buscado",
+     *          required=false,
+     *      ),
      * ),
      * 
     */
